refactor: Replace collect(Collectors.toList()) with toList() method